# qtextraplot

./: .github_changelog_generator  .gitignore  .pre-commit-config.yaml  CLAUDE.md  pyproject.toml  tox.ini
.claude/: settings.local.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test_and_deploy.yml
examples/: matplotlib_view.py  napari.py  napari_colorbar_widget.py  napari_legend_overlay.py  napari_object_outlines.py  napari_plot.py  napari_plot_legend_overlay.py  napari_plot_view.py  napari_view.py  pyqtgraph.py  pyqtgraph_view.py  vispy_view.py
scratch/: dashboard_widget.py  sparse.py
src/qtextraplot/: __init__.py  helpers.py  mixins.py  mpl.py  napari.py  napari_plot.py  pyqtgraph.py  typing.py  vispy.py  widgets.py
src/qtextraplot/_mpl/: gids.py  interaction.py  plot_base.py  toolbar.py  views.py
src/qtextraplot/_napari/: __init__.py  _constants.py  _enums.py  _qt_viewer.py  _qt_viewer_utils.py  _register.py  _utilities.py  _wrapper.py  mixins.py  mouse_actions.py  qt_viewer.py
src/qtextraplot/_napari/_vispy/: __init__.py  vispy_canvas.py  visual.py
src/qtextraplot/_napari/_vispy/overlays/: __init__.py  color_bar.py  color_bar_mpl.py  crosshair.py  legend.py  object_outlines.py
src/qtextraplot/_napari/common/: __init__.py  qt_viewer.py
src/qtextraplot/_napari/common/_vispy/: visual.py
src/qtextraplot/_napari/common/component_controls/: qt_colorbar_controls.py  qt_crosshair_controls.py  qt_grid_controls.py  qt_scalebar_controls.py  qt_text_overlay_controls.py
src/qtextraplot/_napari/common/components/: viewer_model.py
src/qtextraplot/_napari/common/layer_controls/: qt_image_controls.py  qt_image_controls_base.py  qt_labels_controls.py  qt_layer_controls_base.py  qt_layer_controls_container.py  qt_points_controls.py  qt_shapes_controls.py
src/qtextraplot/_napari/common/widgets/: screenshot_dialog.py
src/qtextraplot/_napari/component_controls/: qt_colorbar_controls.py  qt_crosshair_controls.py  qt_grid_controls.py  qt_legend_controls.py  qt_object_outline_controls.py  qt_scalebar_controls.py  qt_text_overlay_controls.py
src/qtextraplot/_napari/components/: viewer_model.py
src/qtextraplot/_napari/components/overlays/: __init__.py  color_bar.py  crosshair.py  legend.py  object_outlines.py
src/qtextraplot/_napari/image/: __init__.py  extract.py  qt_viewer.py  utilities.py  wrapper.py
src/qtextraplot/_napari/image/_qapp_model/: __init__.py  _qproviders.py
src/qtextraplot/_napari/image/_vispy/: __init__.py  utils.py  vispy_camera.py  zoom.py
src/qtextraplot/_napari/image/component_controls/: qt_layer_buttons.py  qt_layers_dialog.py  qt_view_toolbar.py
src/qtextraplot/_napari/image/components/: __init__.py  _viewer_key_bindings.py  _viewer_mouse_bindings.py  viewer_model.py  zoom.py
src/qtextraplot/_napari/layer_controls/: qt_image_controls.py  qt_image_controls_base.py  qt_labels_controls.py  qt_layer_controls_container.py  qt_points_controls.py  qt_shapes_controls.py
src/qtextraplot/_napari/line/: __init__.py  plotting.py  qt_viewer.py  wrapper.py
src/qtextraplot/_napari/line/_vispy/: canvas.py
src/qtextraplot/_napari/line/component_controls/: qt_view_toolbar.py
src/qtextraplot/_napari/line/components/: __init__.py  _viewer_key_bindings.py  viewer_model.py
src/qtextraplot/_napari/widgets/: __init__.py  colorbar.py  qt_mode_button.py  screenshot_dialog.py  zoom_widget.py
src/qtextraplot/_pyqtgraph/: __init__.py  views.py
src/qtextraplot/_vispy/: base.py  camera.py  views.py
src/qtextraplot/_vispy/models/: extents.py
src/qtextraplot/_visuals/: colormaps.py  utilities.py
src/qtextraplot/_visuals/mpl/: interaction.py  plot_base.py  toolbar.py  views.py
src/qtextraplot/_visuals/vispy/: base.py  camera.py  views.py
src/qtextraplot/assets/: __init__.py
src/qtextraplot/assets/stylesheets/: 01_buttons.qss  04_custom.qss  04_toast.qss  05_napari.qss  07_queue.qss
src/qtextraplot/config/: __init__.py  events.py  theme.py
src/qtextraplot/dialogs/: qt_mpl.py
src/qtextraplot/utils/: color.py  colormap.py  context.py  dev.py  interaction.py  notifications.py  qt.py  table_config.py  template.py  utilities.py  views_base.py
src/qtextraplot/widgets/: __init__.py  colorbar.py
tests/: conftest.py  test_colorbar_widget.py  test_config_theme.py  test_public_imports.py  test_utils.py  test_widgets.py
tests/_mpl/: test_plot_base.py  test_views.py
tests/_napari/: test_colorbar_widget.py  test_legend_overlay.py  test_line_legend_overlay.py  test_object_outlines_overlay.py  test_qt_viewer_utils.py  test_utilities.py  test_wrapper_base.py
tests/_napari/common/: test_qt_controls.py
tests/_napari/common/_vispy/: test_vispy_gridlines_visual.py  test_vispy_text_overlay_visual.py
tests/_napari/image/: test_qt_controls.py
tests/_pyqtgraph/: test_views.py
tests/_vispy/: test_base.py  test_camera.py  test_views.py
(+8 files in other folders)
