[build-system]
requires = [
  "setuptools >= 42",
  "wheel",
  "build",
  "setuptools_scm[toml]>=3.4"
]
build-backend = "setuptools.build_meta"

# https://peps.python.org/pep-0621/
[project]
name = "qtextraplot"
description = "Extra plotting widgets for Qt"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "lukas.migas@yahoo.com", name = "Lukasz G. Migas" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "qtpy",
    "koyo",
    "numpy",
]

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
pyside2 = ["pyside2"]
pyside6 = ["pyside6"]
pyqt5 = ["pyqt5"]
pyqt6 = ["pyqt6"]
1d = ["vispy", "napari-plot"]
2d = ["vispy", "napari[optional]==0.5.6"]
ndv = ["ndv[vispy]"]
plot = ["qtextraplot[1d]", "qtextraplot[2d]"]
test = ["pytest>=6.0", "pytest-cov", "pytest-qt"]
dev = [
    "ipython",
    "mypy",
    "pdbpp",
    "pre-commit",
    "rich",
    "ruff",
    "qtextraplot[test]",
]
docs = [
    "mkdocs-macros-plugin ==1.3.7",
    "mkdocs-material ==9.5.49",
    "mkdocstrings ==0.27.0",
    "mkdocstrings-python ==1.13.0",
    "qtextra[console,sentry]",
]

[project.urls]
homepage = "https://github.com/illumion-io/qtextraplot"
repository = "https://github.com/illumion-io/qtextraplot"

[tool.setuptools_scm]
write_to = "src/qtextraplot/_version.py"

# https://github.com/psf/black
[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'


# https://github.com/charliermarsh/ruff
[tool.ruff]
line-length = 120
target-version = "py38"
# https://beta.ruff.rs/docs/rules/

[tool.ruff.lint]
extend-select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "I",    # isort
    "U",    # pyupgrade
    # "S",    # bandit
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
]
# I do this to get numpy-style docstrings AND retain
# D417 (Missing argument descriptions in the docstring)
# otherwise, see:
# https://beta.ruff.rs/docs/faq/#does-ruff-support-numpy-or-google-style-docstrings
# https://github.com/charliermarsh/ruff/issues/2606
extend-ignore = [
    "D100", # Missing docstring in public module
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D401", # First line should be in imperative mood
    "D404", # First word of the docstring should not be This
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
    "E501",
    "UP006",
    "UP007",
    "TCH001",
    "TCH002",
    "TCH003",
    "S101",  # Use of assert detected. The enclosed code will be removed when compiling to optimised byte code.
    "B019",
    "S311",
    "C901", # too complex
    "S603",
    # temporary
    "D205", # 1 blank line required between summary line and description
    "S606",
    "S607",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]
"setup.py" = ["D"]

# https://docs.pytest.org/en/6.2.x/customize.html
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = ["error"]
# options so that i can see the stdout and loguru logs
addopts = ["-s", "-vv", "--log-cli-level=DEBUG", "--log-cli-format=%(asctime)s - %(levelname)s - %(message)s"]

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
files = "src/**/"
strict = true
disallow_any_generics = false
disallow_subclassing_any = false
show_error_codes = true
pretty = true

# # module specific overrides
# [[tool.mypy.overrides]]
# module = ["numpy.*",]
# ignore_errors = true


# https://coverage.readthedocs.io/en/6.4/config.html
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "\\.\\.\\.",
    "raise NotImplementedError()",
]

[tool.coverage.run]
source = ["src"]

# https://github.com/mgedmin/check-manifest#configuration
[tool.check-manifest]
ignore = [
    ".github_changelog_generator",
    ".pre-commit-config.yaml",
    ".ruff_cache/**/*",
    "setup.py",
    "tests/**/*",
    ".idea/**/*",
    "_version.py"
]